(lang dune 3.11)

(name day01)

(generate_opam_files false)

(source
 (github ljjb/advent-of-code))

(authors "ljjb")

(maintainers "ljjb")

(license LICENSE)

(documentation https://github.com/ljjb/advent-of-code)

(package
 (name advent2023)
 (synopsis "Advent of Code 2023")
 (description "Advent!")
 (depends ocaml dune)
 (tags
  (advent aoc)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
